--- a/lib/THANKS
+++ b/lib/THANKS
@@ -11,6 +11,7 @@ Bug reports, patches and/or suggestions were also received from:
 Jakub Bogusz
 Lars Engebretsen
 Dirk Dierckx
+Darian Lanx
 Alexey Melnikov
 Marc Mutz
 Andorz Nilsson
