--- a/THANKS
+++ b/THANKS
@@ -10,6 +10,7 @@ Bug reports, patches and/or suggestions were also received from:
 
 Jakub Bogusz
 Lars Engebretsen
+Dirk Dierckx
 Darian Lanx
 Alexey Melnikov
 Marc Mutz
