--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GNU SASL NEWS -- history of user-visible changes.               -*- outline -*-
 Copyright (C) 2002, 2003, 2004 Simon Josefsson
 See the end for copying conditions.
 
-* Changes in 0.1.2 (unreleased)
+* Changes in 0.1.2 (released 2004-07-16)
 
 ** The SMTP mode in `gsasl' should now work.
 
