--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,227 @@
+2004-07-16  Simon Josefsson <simon@josefsson.org>
+
+	* po/sv.po: Generated.
+
+2004-07-16  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Version 0.1.2.
+
+2004-07-16  Simon Josefsson <simon@josefsson.org>
+
+	* THANKS: Add.
+
+2004-07-16  Simon Josefsson <simon@josefsson.org>
+
+	* gl/getopt.c, gl/getopt1.c, gl/m4/getopt.m4: Update.
+
+2004-07-16  Simon Josefsson <simon@josefsson.org>
+
+	* configure.ac: Use ABINIT.
+
+2004-07-16  Simon Josefsson <simon@josefsson.org>
+
+	* m4/autobuild.m4: Add.
+
+2004-07-16  Simon Josefsson <simon@josefsson.org>
+
+	* gl/dummy.c: Typo.
+
+2004-07-16  Simon Josefsson <simon@josefsson.org>
+
+	* gl/dummy.c, gl/Makefile.am: Add.
+
+2004-07-10  Simon Josefsson <simon@josefsson.org>
+
+	* doc/gsasl.texi: Fix.
+
+2004-07-10  Simon Josefsson <simon@josefsson.org>
+
+	* doc/gsasl.texi: Fix.
+
+2004-07-10  Simon Josefsson <simon@josefsson.org>
+
+	* tests/cram-md5.c: Fix mem leak.
+
+2004-07-05  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Mention SMTP.
+
+2004-07-05  Simon Josefsson <simon@josefsson.org>
+
+	* tests/simple.c, tests/Makefile.am: Fix.
+
+2004-07-05  Simon Josefsson <simon@josefsson.org>
+
+	* tests/utils.c: Add.
+
+2004-07-05  Simon Josefsson <simon@josefsson.org>
+
+	* doc/gsasl.texi, tests/cram-md5.c: Fix.
+
+2004-07-05  Simon Josefsson <simon@josefsson.org>
+
+	* configure.ac: Add comment.
+
+2004-07-05  Simon Josefsson <simon@josefsson.org>
+
+	* tests/simple.c: Use config.h's.
+
+2004-07-03  Simon Josefsson <simon@josefsson.org>
+
+	* configure.ac: Use config.h again.
+
+2004-07-02  Simon Josefsson <simon@josefsson.org>
+
+	* configure.ac: Cosmetic fix.
+
+2004-07-02  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Add.
+
+2004-07-02  Simon Josefsson <simon@josefsson.org>
+
+	* gl/readline.c: Fix.
+
+2004-07-02  Simon Josefsson <simon@josefsson.org>
+
+	* gl/Makefile.am: Update getopt stuff.
+
+2004-07-02  Simon Josefsson <simon@josefsson.org>
+
+	* gl/getopt.c, gl/getopt.h, gl/getopt1.c, gl/getopt_.h,
+	gl/m4/getopt.m4: Update getopt, to make cross compile builds to
+	uClibc systems work.
+
+2004-06-29  Simon Josefsson <simon@josefsson.org>
+
+	* doc/gsasl.texi: Add.
+
+2004-06-28  Simon Josefsson <simon@josefsson.org>
+
+	* src/gsasl.ggo: Fix.
+
+2004-06-28  Simon Josefsson <simon@josefsson.org>
+
+	* src/callbacks.c:
+	(client_callback_passcoe): Use getpassword.
+
+2004-06-28  Simon Josefsson <simon@josefsson.org>
+
+	* src/gsasl.ggo: Make -d the default.
+
+2004-06-28  Simon Josefsson <simon@josefsson.org>
+
+	* src/callbacks.c: Don't prompt for authzid.
+
+2004-06-28  Simon Josefsson <simon@josefsson.org>
+
+	* src/gsasl.ggo: Fix.
+
+2004-06-28  Simon Josefsson <simon@josefsson.org>
+
+	* gl/getpassword.c, NEWS: Add.
+
+2004-06-28  Simon Josefsson <simon@josefsson.org>
+
+	* gl/getpassword.c: Fix.
+
+2004-06-28  Simon Josefsson <simon@josefsson.org>
+
+	* src/callbacks.c: Use getpassword.
+
+2004-06-28  Simon Josefsson <simon@josefsson.org>
+
+	* gl/Makefile.am, gl/getpassword.c, gl/getpassword.h: Add.
+
+2004-06-28  Simon Josefsson <simon@josefsson.org>
+
+	* src/callbacks.c: Use extern readline.
+
+2004-06-28  Simon Josefsson <simon@josefsson.org>
+
+	* gl/readline.c: Add.
+
+2004-06-28  Simon Josefsson <simon@josefsson.org>
+
+	* gl/Makefile.am:
+	(libgl_la_SOURCES) [!READLINE]: Add readline.c.
+
+2004-06-28  Simon Josefsson <simon@josefsson.org>
+
+	* configure.ac: Proper readline tests.
+
+2004-06-28  Simon Josefsson <simon@josefsson.org>
+
+	* configure.ac: Look for readline properly.
+
+2004-06-28  Simon Josefsson <simon@josefsson.org>
+
+	* configure.ac: Look for readline.
+
+2004-06-27  Simon Josefsson <simon@josefsson.org>
+
+	* src/smtp.c: Fix EHLO greeting.
+
+2004-06-27  Simon Josefsson <simon@josefsson.org>
+
+	* src/smtp.c: Parse SASL mechanisms from EHLO.
+
+2004-06-27  Simon Josefsson <simon@josefsson.org>
+
+	* tests/Makefile.am: Clear DEFS.
+
+2004-06-27  Simon Josefsson <simon@josefsson.org>
+
+	* tests/simple.c: Include config.h unconditionally.
+
+2004-06-27  Simon Josefsson <simon@josefsson.org>
+
+	* tests/utils.c, tests/cram-md5.c: Don't #include config.h.
+
+2004-06-27  Simon Josefsson <simon@josefsson.org>
+
+	* tests/Makefile.am: Use AM_CPPFLAGS, only one config.h now.
+
+2004-06-27  Simon Josefsson <simon@josefsson.org>
+
+	* configure.ac: Don't use config.h.
+
+2004-06-27  Simon Josefsson <simon@josefsson.org>
+
+	* src/internal.h: Assume standard C.
+
+2004-06-27  Simon Josefsson <simon@josefsson.org>
+
+	* src/internal.h: Avoid errno.
+
+2004-06-27  Simon Josefsson <simon@josefsson.org>
+
+	* configure.ac: Assume standard C.
+
+2004-06-27  Simon Josefsson <simon@josefsson.org>
+
+	* src/gsasl.c: Avoid errno.
+
+2004-06-27  Simon Josefsson <simon@josefsson.org>
+
+	* configure.ac: Remove errno and uid_t tests.
+
+2004-06-27  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS, configure.ac: Bump versions.
+
+2004-06-26  Simon Josefsson <simon@josefsson.org>
+
+	* doc/doxygen/Doxyfile.in: Fix.
+
+2004-06-26  Simon Josefsson <simon@josefsson.org>
+
+	* doc/doxygen/Doxyfile.in: Fix.
+
+2004-06-26  Simon Josefsson <simon@josefsson.org>
+
+	* doc/doxygen/Doxyfile.in: Fix.
+
 2004-06-26  Simon Josefsson <simon@josefsson.org>
 
 	* po/sv.po: Generated.
