--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ GNU SASL NEWS -- history of user-visible changes.               -*- outline -*-
 Copyright (C) 2002, 2003, 2004 Simon Josefsson
 See the end for copying conditions.
 
+* Changes in 0.1.3 (unreleased)
+
 ** Command line tool support IPv6 (and other protocol families).
 Requires that your system has `getaddrinfo'.
 
