--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,6 +2,11 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.        -*- outline -*-
 Copyright (C) 2002, 2003, 2004 Simon Josefsson
 See the end for copying conditions.
 
+* Changes in 0.1.3 (unreleased)
+
+** API and ABI modifications.
+No changes since last version.
+
 * Changes in 0.1.2 (released 2004-07-16)
 
 ** Cross compile builds should work.
@@ -9,6 +14,7 @@ It should work for any sane cross compile target, but the only tested
 platform is uClibc/uClinux on Motorola Coldfire.
 
 ** API and ABI modifications.
+No changes since last version.
 
 * Changes in 0.1.1 (released 2004-06-26)
 
