--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,7 +2,7 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.        -*- outline -*-
 Copyright (C) 2002, 2003, 2004 Simon Josefsson
 See the end for copying conditions.
 
-* Changes in 0.1.3 (unreleased)
+* Changes in 0.1.3 (released 2004-08-04)
 
 ** API and ABI modifications.
 No changes since last version.
