--- a/lib/NEWS
+++ b/lib/NEWS
@@ -6,7 +6,7 @@ See the end for copying conditions.
 
 ** More translations.
 French (by Michel Robitaille), Dutch (by Elros Cyriatan), Polish (by
-Jakub Bogusz), Romanian (by Laurentiu Buzdugan).
+Jakub Bogusz), and Romanian (by Laurentiu Buzdugan).
 
 * Changes in 0.1.3 (released 2004-08-04)
 
