--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,7 @@ See the end for copying conditions.
 German (by Roland Illig), Basque (by Mikel Olasagasti), French (by
 Michel Robitaille), Irish (by Kevin Patrick Scannell), Dutch (by Elros
 Cyriatan), Polish (by Jakub Bogusz), Romanian (by Laurentiu Buzdugan),
-Serbian (by Aleksandar Jelenak).
+and Serbian (by Aleksandar Jelenak).
 
 * Changes in 0.1.3 (released 2004-08-04)
 
