--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ See the end for copying conditions.
 
 * Changes in 0.1.4 (unreleased)
 
+** Revamp of gnulib compatibility files.
+
 ** More translations.
 German (by Roland Illig), Basque (by Mikel Olasagasti), French (by
 Michel Robitaille), Irish (by Kevin Patrick Scannell), Dutch (by Elros
