--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,7 +2,7 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.        -*- outline -*-
 Copyright (C) 2002, 2003, 2004 Simon Josefsson
 See the end for copying conditions.
 
-* Changes in 0.1.4 (unreleased)
+* Changes in 0.1.4 (released 2004-08-08)
 
 ** Fix various compile time warnings.
 
